examples/kju/positive/functions/function_whith_parameters_as_result_of_other_functions.kju
fun f(x:Int,y:Int){
	return 5;
}

fun g():Int{
	return 5;
}

fun kju():Unit{
	var x:Int=f(g(),g());
}