examples/kju/negative/functions/shadowing_function_has_wrong_return_type.kju
fun f():Int{
	return 5;
}

fun kju():Unit{

	fun f():Bool{
		return true;
	}
	var x:Int=f();
}